--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <section id="profile" class="container-fluid">
         <div class="row">
             <div class="col-md-12">
-                <img class="img img-circle" src="img/ganesh.png" width="200" height="200" alt="GaneshKumarM">
+                <img class="img img-circle" src="img/fauzan.jpg" width="200" height="200" alt="Fauzan">
             </div>
         </div>
     </section>
@@ -31,8 +31,9 @@
     <section id="home" class="container-fluid">
         <div class="row">
             <div class="col-md-12">
-                <h1 class="title">Ganesh Kumar M</h1>
-                <p>Why be a king when you can be the god</p>
+                <h1 class="title">Muhammad Nur Fauzan</h1>
+                <p> "Very little is needed to make a happy life; it is all within yourself, in your way of thinking."</p>
+                <p> Marcus Aurelius</p>
             </div>
         </div>
     </section>
