--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <section id="profile" class="container-fluid">
         <div class="row">
             <div class="col-md-12">
-                <img class="img img-circle" src="img/fauzan.jpg" width="200" height="200" alt="Fauzan">
+                <img class="img img-circle" src="img/fauzan.png" width="200" height="200" alt="Fauzan">
             </div>
         </div>
     </section>
