--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>GaneshKumarM-MinimalPortfolioTemplate</title>
+    <title>Muhammad Nur Fauzan</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -62,28 +62,13 @@
     <section id="projects" class="container-fluid">
         <div class="row">
             <div class="col-md-12">
-                <h1 class="title">Projects</h1>
+                <h1 class="title">Website</h1>
                 <ul class="col-md-12">
-                    <a id="pomodoro-clock" href="https://github.com/ganeshmkumar/PomodoroClock.git" target="_blank">
-                        <li>PomodoroClock</li>
+                    <a id="pomodoro-clock" href="https://gudang.muhnurfauzan.my.id" target="_blank">
+                        <li>Gudang</li>
                     </a>
-                    <a id="upvote" href="https://github.com/ganeshmkumar/Upvote.git" target="_blank">
-                        <li>Upvote</li>
-                    </a>
-                    <a id="tvfreak" href="https://github.com/ganeshmkumar/TVFreak.git" target="_blank">
-                        <li>TVFreak</li>
-                    </a>
-                    <a id="twentyh" href="https://github.com/ganeshmkumar/20H.git" target="_blank">
-                        <li>20H</li>
-                    </a>
-                    <a id="notify-me" href="https://github.com/ganeshmkumar/NotifyMe.git" target="_blank">
-                        <li>NotifyMe</li>
-                    </a>
-                    <a id="tweet" href="https://github.com/ganeshmkumar/Tweet.git" target="_blank">
-                        <li>Tweet</li>
-                    </a>
-                    <a id="wikipedia-viewer" href="https://github.com/ganeshmkumar/WikipediaViewer.git" target="_blank">
-                        <li>WikipediaViewer</li>
+                    <a id="upvote" href="https://anime.muhnurfauzan.my.id" target="_blank">
+                        <li>Anime Stream</li>
                     </a>
                 </ul>
 
@@ -96,20 +81,20 @@
             <div class="col-md-12">
                 <h1 class="title">Contact</h1>
                 <ul>
-                    <a id="envelope" href="mailto:ganeshkumar.m1996@gmail.com">
+                    <a id="envelope" href="mailto:muhnurfauzan73@gmail.com">
                         <li><i class="fa fa-envelope"></i></li>
                     </a>
-                    <a id="github" href="https://github.com/ganeshkumarm1" target="_blank">
+                    <a id="github" href="https://github.com/muhnurfauzan" target="_blank">
                         <li><i class="fa fa-github"></i></li>
                     </a>
-                    <a id="quora" href="https://www.quora.com/profile/GaNeSh-KuMaR-M-4" target="_blank">
+                    <a id="facebook" href="https://web.facebook.com/muhnurfauzan.17" target="_blank">
                         <li><i class="fa"><strong>Q</strong></i></li>
                     </a>
-                    <a id="linkedin" href="https://in.linkedin.com/in/ganesh-kumar-m-47b876111" target="_blank">
-                        <li><i class="fa fa-linkedin"></i></li>
+                    <a id="telegram" href="t.me/muhnurfauzan" target="_blank">
+                        <li><i class="fa fa-telegram"></i></li>
                     </a>
-                    <a id="codepen" href="http://codepen.io/ganeshkumarm/pens/public" target="_blank">
-                        <li><i class="fa fa-codepen"></i></li>
+                    <a id="instagram" href="https://www.instagram.com/muhnurfauzan_/" target="_blank">
+                        <li><i class="fa fa-instagram"></i></li>
                     </a>
                 </ul>
             </div>
