--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
                         <li><i class="fa fa-github"></i></li>
                     </a>
                     <a id="facebook" href="https://web.facebook.com/muhnurfauzan.17" target="_blank">
-                        <li><i class="fa"><strong>Q</strong></i></li>
+                        <li><i class="fa fa-facebook"><strong>Q</strong></i></li>
                     </a>
-                    <a id="telegram" href="t.me/muhnurfauzan" target="_blank">
+                    <a id="telegram" href="https://t.me/muhnurfauzan" target="_blank">
                         <li><i class="fa fa-telegram"></i></li>
                     </a>
                     <a id="instagram" href="https://www.instagram.com/muhnurfauzan_/" target="_blank">
