--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                         <li><i class="fa fa-github"></i></li>
                     </a>
                     <a id="facebook" href="https://web.facebook.com/muhnurfauzan.17" target="_blank">
-                        <li><i class="fa fa-facebook"><strong>Q</strong></i></li>
+                        <li><i class="fa fa-facebook"></i></li>
                     </a>
                     <a id="telegram" href="https://t.me/muhnurfauzan" target="_blank">
                         <li><i class="fa fa-telegram"></i></li>
@@ -110,9 +110,6 @@
         </div>
     </section>
     <br>
-    <div>
-        <a href="https://www.ganeshkumarm.me" target="_blank" style="color: red; text-decoration: underline; font-weight: bold;">Checkout my new site</a>
-    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <script src="js/script.js"></script>
