--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                         <li><i class="fa fa-github"></i></li>
                     </a>
                     <a id="telegram" href="https://t.me/muhnurfauzan" target="_blank">
-                        <li><i class="fa fa-telegram_outlined"></i></li>
+                        <li><i class="telegram"></i></li>
                     </a>
                     <a id="facebook" href="https://web.facebook.com/muhnurfauzan.17" target="_blank">
                         <li><i class="fa fa-facebook"></i></li>
